# pygfunction

./: .all-contributorsrc  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE.md  MANIFEST.in  README.md  erf_int.xlsx  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: release.yml  test.yml
doc/: Makefile  make.bat  requirements.txt
doc/source/: boreholes.rst  citing.rst  conf.py  example_bore_field_thermal_resistance.rst  example_comparison_load_aggregation.rst  example_custom_bore_field.rst  example_custom_bore_field_from_file.rst  example_custom_borehole.rst  example_equal_inlet_temperature.rst  example_fluid_temperature.rst  example_fluid_temperature_multiple_boreholes.rst  example_index.rst  example_load_aggregation.rst  example_mixed_inlet_conditions.rst  example_multiple_independent_Utubes.rst  example_multipole_temperature.rst  example_regular_bore_field.rst  example_uniform_heat_extraction_rate.rst  example_uniform_temperature.rst  gfunction.rst  heat_transfer.rst  index.rst  install.rst  media.rst  modules.rst  networks.rst  nomenclature.rst  pipes.rst  properties.rst  utilities.rst
doc/source/examples/: bore_field_thermal_resistance.rst  comparison_gfunction_solvers.rst  comparison_load_aggregation.rst  custom_bore_field.rst  custom_bore_field_from_file.rst  custom_borehole.rst  discretize_boreholes.rst  equal_inlet_temperature.rst  (+12 more)
examples/: bore_field_thermal_resistance.py  comparison_gfunction_solvers.py  comparison_load_aggregation.py  custom_bore_field.py  custom_bore_field_from_file.py  custom_borehole.py  discretize_boreholes.py  equal_inlet_temperature.py  fluid_temperature.py  fluid_temperature_multiple_boreholes.py  fluid_temperature_reversible_flow_direction.py  inclined_boreholes.py  load_aggregation.py  mixed_inlet_conditions.py  mixed_inlet_temperature.py  mixed_inlet_temperature2.py  multiple_independent_Utubes.py  multipole_temperature.py  profil.prof  regular_bore_field.py  unequal_segments.py  uniform_heat_extraction_rate.py  uniform_temperature.py
examples/data/: CiBe14_uniform_heat_extraction_rate.txt  Cimmi16_multiple_independent_Utubes.txt
pygfunction/: HDPEPipeDimensions.json  __init__.py  _mpl.py  api.py  borefield.py  borehole_design.py  boreholes.py  enums.py  gfunction.py  ground_heat_exchanger.py  heat_transfer.py  load_aggregation.py  media.py  networks.py  pipes.py  properties.py  utilities.py
pygfunction/examples/: bore_field_thermal_resistance.py  coaxial_example_temporary.py  common_g_function_interface.py  comparison_gfunction_solvers.py  comparison_load_aggregation.py  custom_bore_field.py  custom_bore_field_from_file.py  custom_borehole.py  custom_borehole_design.py  custom_gfunction_interface.py  discretize_boreholes.py  equal_inlet_temperature.py  fluid_temperature.py  fluid_temperature_multiple_boreholes.py  issue78-compare_detailed.py  issue78-compare_similarities.py  issue78-compare_solvers.py  load_aggregation.py  mixed_inlet_conditions.py  multiple_independent_Utubes.py  multipole_temperature.py  regular_bore_field.py  unequal_segment_lengths.py  unequal_segment_number.py  unequal_segments.py  uniform_heat_extraction_rate.py  uniform_temperature.py
pygfunction/heat_transfer/: __init__.py  finite_line_source.py  finite_line_source_inclined.py  finite_line_source_vertical.py
pygfunction/solvers/: __init__.py  _base_solver.py  base_solver.py  detailed.py  equivalent.py  similarities.py
tests/: borefield_test.py  boreholes_test.py  conftest.py  gfunction_test.py  heat_transfer_test.py  media_test.py  networks_test.py  pipes_test.py  test_api.py  test_boreholes.py  test_erf_int.py  test_foo.py  test_gfunction.py  test_pipes.py
(+14 files in other folders)
