[metadata]
name = pygfunction
version = 2.2.0
description = A g-function calculator for Python
author = Massimo Cimmino
author_email = massimo.cimmino@polymtl.ca
long_description_content_type = text/markdown
long_description = file: README.md, CHANGELOG.md, LICENSE.md
keywords = Geothermal, Ground-source, Ground heat exchangers
url = https://github.com/MassimoCimmino/pygfunction
license = BSD 3-Clause License
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering
    Topic :: Utilities

[options]
packages = pygfunction
install_requires =
    coolprop >= 6.4.1
    matplotlib >= 3.5.1
    numpy >= 1.21.5
    scipy >= 1.7.3
python_requires = >=3.7

[options.extras_require]
doc =
    numpydoc >= 1.2.0
    recommonmark >= 0.6.0
    sphinx >= 4.4.0
testing =
    pytest >= 7.1.1
    pytest-cov >= 3.0.0
    tox >= 3.24.5
