[metadata]
name = pygfunction
version = 2.3.0
description = A g-function calculator for Python
author = Massimo Cimmino
author_email = massimo.cimmino@polymtl.ca
long_description_content_type = text/markdown
long_description = file: README.md, CHANGELOG.md, LICENSE.md
keywords = Geothermal, Ground-source, Ground heat exchangers
url = https://github.com/MassimoCimmino/pygfunction
license = BSD 3-Clause License
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Utilities

[options]
packages = pygfunction
install_requires =
    numpy >= 1.26.4
    scipy >= 1.13.1
    secondarycoolantprops >= 1.3
    typing_extensions >= 4.11.0

python_requires = >=3.9

[options.extras_require]
doc =
    numpydoc >= 1.7.0
    recommonmark >= 0.7.1
    sphinx >= 7.3.7
plot =
    matplotlib >= 3.9.2
testing =
    matplotlib >= 3.9.2
    pytest >= 7.4.4
    pytest-cov >= 6.1.1
    tox >= 4.25.0
